correction firefox

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -292,7 +292,6 @@ header {
     }
   }
 }
-
 .restaurants > div {
   display: block;
   .la-palette img {
@@ -337,7 +336,7 @@ header {
     border-radius: 10%/50%;
     .text-cartes {
       width: 80%;
-      font-size: 0.9rem;
+      font-size: 0.83rem;
       line-height: 2rem;
       padding-left: 8%;
     }
